Correção nas colisões e adicionado cooldown

--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
             }
           }
 
+          level.cooldownTiro(player);
+
           level.mover(dt);
 
           level.colidiuCom(player,
